objects/tffa__EnvironmentConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>tffa__OnlineBankingLoginUrl__c</fullName>
        <description>Login Url to the Online Banking Url</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Login Url to the Online Banking Url for authentication</inlineHelpText>
        <label>Online Banking Login Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingProvider__c</fullName>
        <description>Name of the Online banking provider system. e.g. NCRD3, NCRDI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Online Banking Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingUrl__c</fullName>
        <description>Url to the Online Banking Url</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Online Banking Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__PlaidBankTransferACHClass__c</fullName>
        <description>Specifies the use case of the transfer.  Required for transfers on an ACH network.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Possible values: arc, cbr, ccd, cie, cor, ctx, iat, mte, pbr, pop, pos, ppd, rck, tel, web</inlineHelpText>
        <label>Plaid Bank Transfer ACH class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PlaidBankTransferNetwork__c</fullName>
        <description>The network or rails used for the transfer. Valid options are ach, same-day-ach, or wire.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Possible values: ach, same-day-ach, wire</inlineHelpText>
        <label>Plaid Bank Transfer Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PlaidBankTransferOriginationAccountId__c</fullName>
        <description>unique identifier for the origination account for this transfer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plaid Bank Transfer Origination Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrequalReminderSchedule__c</fullName>
        <description>Prequal reminder frequency in Days.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configure Mortgage prequal reminder schedule in number of days, with each number separated by a semicolon ;. Example - 5;15;30</inlineHelpText>
        <label>Prequal reminder schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReCaptchaErrorScoreThreshold__c</fullName>
        <description>ReCaptcha error score (Risk analysis score) threshold value. Range is from 0 to 1 where 1.0 is very likely a good interaction, 0.0 is very likely a bot.</description>
        <inlineHelpText>ReCaptcha error score (Risk analysis score) threshold value. Range is from 0 to 1 where 1.0 is very likely a good interaction, 0.0 is very likely a bot.</inlineHelpText>
        <label>reCAPTCHA error score threshold</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ReCaptchaWarningScoreThreshold__c</fullName>
        <description>ReCaptcha warning score (Risk analysis score) threshold value. Range is from 0 to 1 where 1.0 is very likely a good interaction, 0.0 is very likely a bot.</description>
        <inlineHelpText>ReCaptcha warning score (Risk analysis score) threshold value. Range is from 0 to 1 where 1.0 is very likely a good interaction, 0.0 is very likely a bot.</inlineHelpText>
        <label>reCAPTCHA warning score threshold</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ResumeSubmissionPath__c</fullName>
        <description>The route to be used when resuming a saved/abandoned submission</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resume Submission url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RoutingNumber__c</fullName>
        <description>Routing number of the Instituition. An identification number assigned to the banking institution.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Routing number of the Instituition. An identification number assigned to the banking institution.</inlineHelpText>
        <label>Routing number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SessionIdleDuration__c</fullName>
        <defaultValue>18</defaultValue>
        <description>It is the duration of time in minutes in which the user does not perform any action on the UI . This should be used to display warning to the user</description>
        <inlineHelpText>This should be less than the session validity duration</inlineHelpText>
        <label>Session Idle warning duration in minutes</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SessionKeepAliveDuration__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The time duration for UI to keep alive the user session . This will help in extending the session when user is interacting with the UI</description>
        <inlineHelpText>Duration in minutes</inlineHelpText>
        <label>Session Keep Alive duration in minutes</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SessionValidityDuration__c</fullName>
        <defaultValue>20</defaultValue>
        <description>The duration in minutes for which the user session will be considered valid</description>
        <label>Session validity duration in minutes</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SubmissionAbandonmentDuration__c</fullName>
        <defaultValue>60</defaultValue>
        <description>It is the duration of time in minutes after which a submission is abandoned if not worked upon by the user. Abandoned submission can be inquired and resumed from application tracker.</description>
        <label>Submission Abandonment duration in mins</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SubmissionExpirationDuration__c</fullName>
        <defaultValue>4</defaultValue>
        <description>It is the duration of time after which an abandoned submission is expired and cannot be resumed.</description>
        <inlineHelpText>This should be greather than the submissions abandonment duration</inlineHelpText>
        <label>Submission expiration duration in days</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SubmissionReminderSchedule__c</fullName>
        <description>Submission reminder frequency in Days.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configure Submission reminder schedule in number of days, with each number separated by a semicolon ;. Example - 5;15;30</inlineHelpText>
        <label>Submission reminder schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SubmissionTrackerPath__c</fullName>
        <description>The route to be used for navigating to the submission/application tracker</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission Tracker Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SubmittedPollingCount__c</fullName>
        <description>Maximum number of times application status may be enquired after submission. Used when asynchronous processing of application is triggered on submission. Polling typically happens in confirmation page.</description>
        <inlineHelpText>Maximum number of times application status may be enquired after submission. Used when asynchronous processing of application is triggered on submission. Polling typically happens in confirmation page.</inlineHelpText>
        <label>Submitted polling count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SubmittedPollingIntervalInSeconds__c</fullName>
        <description>Interval between successive requests to enquire application status after submission.  Used when asynchronous processing of application is triggered on submission. Polling typically happens in confirmation page.</description>
        <inlineHelpText>Interval between successive requests to enquire application status after submission.  Used when asynchronous processing of application is triggered on submission. Polling typically happens in confirmation page.</inlineHelpText>
        <label>Submitted polling interval in seconds</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SuccessOnGeoFencingCalloutError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true , then continue even if Geo Callout error or null IP</description>
        <inlineHelpText>If true , then continue even if Geo Callout error or null IP</inlineHelpText>
        <label>Success on Geo Fencing Callout Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__TaxContributionCutoffDate__c</fullName>
        <description>Cutoff date in MM/DD for tax favored account contribution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Contribution Cutoff Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Environment Configuration</label>
</CustomObject>